--- a/CV.tex
+++ b/CV.tex
@@ -18,30 +18,36 @@ KTH, Stockholm (2022-2027)
 
 \subsection*{Technical Preparatory Year}
 KTH, Stockholm (2021)
+- Completed courses in mathematics, physics and chemistry.
 
 \subsection*{Medical Doctor's Program}
 University of Belgrade, Faculty of Medicine, Belgrade (2017-2020)
+- Completed three years of medical studies and enrolled in the fourth year.
 
 \section*{Experience}
 \subsection*{Business Relations Member}
 KTH AI Society, Stockholm (2022-Present)
+- Responsible for maintaining and developing relations with companies and organizations.
 
 \subsection*{Medical Assistant}
 Västra Götalandsregionen, Alingsås (2020-2021)
+- Worked during the COVID-19 pandemic in the surgery department.
 
 \subsection*{Teacher Assistant}
 Academedia AB, Alingsås (2016-2017)
+- Responsible and taught students in the field of english language and literature. \\
+- Grading and preparing students for the national exam. \\
 
 \section*{Skills}
-- Proficient in Java
-- Have some experience with Python, C++, JavaScript, HTML.
-- Understanding of data structures and algorithms.
-- Experience with Git and GitHub.
-- Strong problem-solving and analytical skills.
+- Proficient in Java. \\
+- Have some experience with Python, C++, JavaScript, HTML. \\
+- Understanding of data structures and algorithms. \\
+- Experience with Git and GitHub. \\
+- Strong problem-solving and analytical skills. \\
 
 \section*{Activities and Interests}
-- Member of the KTH AI Society
-- Tennis coach for 5 years and member of the tennis club for 10 years.
-- Interested in artificial intelligence and machine learning
+- Member of the KTH AI Society. \\
+- Tennis coach for 5 years and member of the tennis club for 10 years. \\
+- Interested in artificial intelligence and machine learning, \\
 
 \end{document}
