--- a/sections/_header.tex
+++ b/sections/_header.tex
@@ -17,7 +17,7 @@
 	\end{minipage}%
 	\begin{minipage}[b]{.2\textwidth}
 	\raggedleft
-	\href{https://github.com/FilipDimitrijevic97}{GitHub: \github} \\% Github
+	\href{https://github.com/FilipDimitrijevic97}{GitHub: FilipDimitrijevic97} \\% Github
 	\href{https://www.linkedin.com/in/\LinkedIn}{LinkedIn: \LinkedIn} \\% LinkedIn
 	\end{minipage}
 
